Gallery image pagination added

--- a/src/templates/public/dashboard.html
+++ b/src/templates/public/dashboard.html
@@ -4,7 +4,7 @@
 <div class="d-flex justify-content-between">
     <div class="fs-3 fw-semibold">
         <i class="bi bi-list-columns-reverse"></i> My Quotation
-        <a href="{{ url_for('public.all_quotes') }}" class="text-decoration-none text-primary-emphasis">(View All)</a>
+        <a href="{{ url_for('public.all_quotes') }}" class="text-decoration-none text-primary-emphasis">(<i class="bi bi-eye-fill"></i>View All)</a>
     </div>
     <button class="btn btn-primary rounded-4" data-bs-toggle="modal" data-bs-target="#newQuoteModal">
         <i class="bi bi-file-diff-fill"></i> Create New Quote
