--- a/src/templates/public/index.html
+++ b/src/templates/public/index.html
@@ -8,11 +8,26 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css')}}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-icons.min.css')}}">
     <script src="{{ url_for('static', filename='js/jquery-3.7.1.min.js')}}"></script>
+    <style>
+        body::after {
+            content: '';
+            position: fixed;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background: url("{{ url_for('static', filename='assets/r.png')}}");
+            opacity: 0.05;
+            pointer-events: none;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+    </style>
 </head>
 <body class="d-flex flex-column min-vh-100 bg-light-subtle">
     <!-- Notice section start -->
     <div class="clearfix mt-3 ms-2 me-2">
-        <div class="mx-auto" style="max-width: 500px;">
+        <div class="mx-auto" style="max-width: 720px;">
             {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %} {% for category, message in messages %}
             <div class="alert alert-{{ category }} alert-dismissible text-center mb-2 fw-semibold rounded-5" fade show>
                 <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
