--- a/src/templates/public/quotation.html
+++ b/src/templates/public/quotation.html
@@ -82,10 +82,10 @@
                 <tr>
                     <td class="text-start">{{ item.material }}</td>
                     <td class="text-start">{{ item.spec }}</td>
-                    <td class="text-center">{{ item.qty }}</td>
+                    <td class="text-center">{{ "%.2f"|format(item.qty) }}</td>
                     <td class="text-center">{{ item.unit }}</td>
-                    <td class="text-center">{{ item.unit_price }}</td>
-                    <td class="text-center">{{ item.total_price }}</td>
+                    <td class="text-center">{{ "%.2f"|format(item.unit_price) }}</td>
+                    <td class="text-center">{{ "%.2f"|format(item.total_price) }}</td>
                     <td class="text-start">{{ item.note }}</td>
                     {% if item.ref_img %}
                     <td class="text-center">
@@ -99,7 +99,7 @@
                 {% endfor %}
                 <tr>
                     <td colspan="5" class="text-center fw-bold">Net Amount</td>
-                    <td class="text-center fw-bold">{{ net_amount }}</td>
+                    <td class="text-center fw-bold">{{ "$%.2f"|format(net_amount) }}</td>
                     <td colspan="2" class="text-start fst-italic">USD</td>
                 </tr>
             </tbody>
