--- a/src/templates/public/includes/edit_quote_script.html
+++ b/src/templates/public/includes/edit_quote_script.html
@@ -13,10 +13,10 @@
                 var editData = ""
                 $.each(response, function (index, value) {
                     data += `
-                    <div class="col-3">
+                    <div class="col-3 mb-2">
                         <div class="card">
                             <img src="${value.url}" class="card-img img-fluid"
-                                height="50%" alt="${value.name}">
+                                style="max-height: 220px;" alt="${value.name}">
                             <div class="card-img-overlay text-end">
                                 <span class="badge fs-6 bg-info-subtle fw-light text-sm text-info-emphasis rounded p-2">
                                     ${value.name}
@@ -31,16 +31,16 @@
                     </div>
                     `
                     editData += `
-                    <div class="col-3">
+                    <div class="col-3 mb-2">
                         <div class="card">
-                            <img src="${value.url}" class="card-img img-fluid" width="100%"
-                                height="100%" alt="${value.name}">
+                            <img src="${value.url}" class="card-img img-fluid"
+                                style="max-height: 220px;" alt="${value.name}">
                             <div class="card-img-overlay text-end">
-                                <span class="badge fs-6 bg-info-subtle text-info-emphasis rounded p-2">
+                                <span class="badge fs-6 bg-info-subtle fw-light text-sm text-info-emphasis rounded p-2">
                                     ${value.name}
                                 </span>
                                 <button type='button' class='btn btn-sm' onclick='setEditImgId(${value.id}, "${value.url}")'>
-                                    <span class="badge fs-6 bg-success-subtle text-success rounded p-2">
+                                    <span class="badge fs-6 bg-success-subtle fw-light text-sm text-success rounded p-2">
                                         <i class="bi bi-check2"></i> Select
                                     </span>
                                 </button>
