Run script for windows and other minor changes

--- a/src/templates/public/quotation.html
+++ b/src/templates/public/quotation.html
@@ -132,10 +132,10 @@
             <div class="text-start ps-3 me-5">
                 <div class="fw-bold fs-5 mb-2">Remarks:</div>
                 <span class="fw-bold">1. Payment Method: </span>
-                <span class="fw-light">T/T</span>
+                <span class="fw-light">T/T or T/T + L/C</span>
                 <br>
                 <span class="fw-bold">2. Payment Term: </span>
-                <span class="fw-light">30% in advance before production, and balance payment before delivery</span>
+                <span class="fw-light">30% advance before production, and balance payment before delivery</span>
                 <br>
                 <span class="fw-bold">3. Delivery: </span>
                 <span class="fw-light">FOB (Qingdao Port)</span>
