--- a/src/templates/public/edit_quote.html
+++ b/src/templates/public/edit_quote.html
@@ -17,14 +17,28 @@
 
 <div class="d-flex justify-content-between mb-2">
     <div class="fs-4 fw-semibold">Quote Information</div>
-    <div>
-        <button class="btn btn-outline-success rounded-4" data-bs-toggle="modal" data-bs-target="#updateQuoteModal">
+    <div class="btn-group">
+        <button class="btn btn-outline-success rounded-4 me-2" data-bs-toggle="modal" data-bs-target="#updateQuoteModal">
             <i class="bi bi-pencil-square"></i> Edit Information
         </button>
-        <a href="{{ url_for('public.quotation', id=quote.q_id) }}" target="_blank"
-            class="btn btn-outline-primary rounded-4 ps-2">
-            <i class="bi bi-eye-fill"></i> Show Preview
-        </a>
+        <div class="dropdown">
+            <button class="btn btn-outline-primary dropdown-toggle rounded-4" type="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                <i class="bi bi-eye-fill"></i> Show Preview
+            </button>
+            <ul class="dropdown-menu">
+                <li>
+                    <a class="dropdown-item" href="{{ url_for('public.quotation', id=quote.q_id) }}" target="_blank">
+                        With Image
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="{{ url_for('public.quotation_noimg', id=quote.q_id) }}" target="_blank">
+                        Without Image
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
 <div class="table-responsive">
